fix test action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
           user: ${{secrets.USER}} # Remote server user - required
           private_key: ${{secrets.PRIVATE_KEY}} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.HOST_FINGERPRINT}} # Public ssh key fingerprint, viewable via ssh-keyscan -H $HOST -p $PORT - optional
-          command: echo 'hello world' > tmp/cd-test-1 # Command to be executed - Default: echo 'hello world' - optional
+          command: echo 'hello world' > /tmp/cd-test-1 # Command to be executed - Default: echo 'hello world' - optional
