--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     name: SSH Copy and Deploy
     runs-on: ubuntu-latest
     steps: 
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+
       - uses: betanzos/scp-upload@v1
         with:
           source: /github/home
