update uploaded path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,14 @@ jobs:
           port: ${{secrets.PORT}}
           username: ${{secrets.USER}}
           key: ${{secrets.PRIVATE_KEY}}
-          remote_dir: /tmp
+          remote_dir: ~
           recursive: true
+
       - uses: D3rHase/ssh-command-action@v0.2.2
         with:
-          host: ${{secrets.HOST}} # Remote server address / ip - required
-          port: ${{secrets.PORT}} # Remote server port -  Default: 22 - optional
-          user: ${{secrets.USER}} # Remote server user - required
-          private_key: ${{secrets.PRIVATE_KEY}} # Private ssh key registered on the remote server - required
-          host_fingerprint: ${{secrets.HOST_FINGERPRINT}} # Public ssh key fingerprint, viewable via ssh-keyscan -H $HOST -p $PORT - optional
-          command: echo 'hello world' > /tmp/cd-test-1 # Command to be executed - Default: echo 'hello world' - optional
+          host: ${{secrets.HOST}}
+          port: ${{secrets.PORT}}
+          user: ${{secrets.USER}}
+          private_key: ${{secrets.PRIVATE_KEY}}
+          host_fingerprint: ${{secrets.HOST_FINGERPRINT}}
+          command: echo 'hello world' > /tmp/cd-test-1
